viewer/bridge/tidyvnc.h


typedef uint64_t tidyvnc_handle;
typedef uint32_t tidyvnc_status;
typedef struct { const uint8_t* data; uint64_t length; } tidyvnc_bytes;
typedef struct {
  uint32_t size, version, shared, editable;
  uint64_t revision, generation;
} tidyvnc_sharing;
typedef struct {
  uint32_t size, version, editable, reserved;
  uint64_t revision, generation;
  uint32_t tls_priority_length, ca_file_length, crl_file_length, reserved2;
  char types[1025]; 
  char tls_priority[4096], ca_file[4096], crl_file[4096];
} tidyvnc_security_configuration;
typedef struct {
  uint32_t size, version;
  tidyvnc_bytes types, tls_priority, ca_file, crl_file;
} tidyvnc_security_update;
typedef struct { uint8_t* data; uint64_t length; } tidyvnc_mutable_bytes;
typedef struct {
  uint32_t size, version, type, available, protection, credentials, aes_bits, reserved;
  char name[32]; 
} tidyvnc_security_choice;
typedef struct {
  uint32_t size, version, count, reserved;
  uint32_t types[32];
  char canonical[1025]; 
} tidyvnc_security_selection;
typedef struct {
  uint32_t size, version, code, domain;
  uint32_t detail; int32_t native_error;
  char message[160]; 
} tidyvnc_error;
typedef struct {
  uint32_t size, version;
  uint64_t features;
  uint32_t handle_capacity, runtime_capacity, security_count, reserved;
  uint32_t security_types[32]; 
} tidyvnc_abi_info;
typedef struct {
  uint32_t size, version, session_capacity, reserved;
  uint64_t required_features;
} tidyvnc_runtime_options;
typedef struct {
  uint32_t size, version, port, ipv4, ipv6, backlog, pending_capacity,
           event_capacity, pending_timeout_ms, reserved;
  tidyvnc_bytes address; 
} tidyvnc_listener_options;
typedef struct {
  char host[64]; 
  uint32_t port, reserved;
} tidyvnc_listener_address;
typedef struct {
  uint32_t size, version, state, error;
  int32_t native_error;
  uint32_t pending, address_count, reserved;
  tidyvnc_listener_address addresses[2];
} tidyvnc_listener_snapshot;
typedef struct {
  uint32_t size, version, kind, reserved;
  uint64_t sequence, incoming_id; 
  tidyvnc_listener_address peer;
  tidyvnc_listener_snapshot snapshot;
} tidyvnc_listener_event;
typedef struct {
  uint32_t size, version;
  uint32_t security_count, security_types[32]; 
  uint32_t prompt_timeout_ms, event_capacity, command_capacity, reserved;
  uint64_t framebuffer_bytes, publication_bytes;
  tidyvnc_bytes tls_priority, ca_file, crl_file; 
} tidyvnc_session_options;
typedef struct {
  uint32_t size, version, ipv4, ipv6;
  uint32_t resolve_timeout_ms, connect_timeout_ms, address_timeout_ms, reserved;
  tidyvnc_bytes endpoint; 
} tidyvnc_connect_options;
typedef struct {
  uint32_t size, version;
  uint64_t operation, generation;
} tidyvnc_operation;
typedef struct { uint32_t id, x, y, width, height, flags; } tidyvnc_remote_screen;
typedef struct { uint32_t size, version; tidyvnc_bytes spki; } tidyvnc_certificate_key_info;
typedef struct { uint32_t size, version, length, reserved; uint8_t bytes[64]; } tidyvnc_key_digest;
TIDYVNC_API tidyvnc_status tidyvnc_host_key_validate(tidyvnc_bytes key, uint32_t* bits, tidyvnc_error* error);
TIDYVNC_API tidyvnc_status tidyvnc_certificate_key_create(tidyvnc_bytes, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_certificate_key_get(tidyvnc_handle, tidyvnc_certificate_key_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_certificate_key_digest(tidyvnc_handle, uint32_t, tidyvnc_key_digest*, tidyvnc_error*);
typedef struct {
  uint32_t size, version, reasons, fatal_status, may_override, reserved;
} tidyvnc_certificate_policy;
TIDYVNC_API tidyvnc_status tidyvnc_certificate_policy_get(uint32_t, tidyvnc_certificate_policy*, tidyvnc_error*);
typedef struct {
  uint32_t size, version, mode, x, y, fits;
  char canonical[64];
} tidyvnc_scaling;
typedef struct {
  uint32_t size, version, width, height, quality, reserved;
  uint32_t x, y, tile_width, tile_height;
  uint64_t previous_sequence;
  uint32_t damage_x, damage_y, damage_width, damage_height;
} tidyvnc_tile_options;
typedef struct {
  uint32_t size, version, cache_hit, reserved;
  uint64_t cache_bytes;
} tidyvnc_tile_result;
typedef struct {
  uint32_t size, version, quality, reserved;
  double scale_x, scale_y;
} tidyvnc_cursor_options;
typedef struct {
  uint32_t size, version, width, height, hotspot_x, hotspot_y;
  uint32_t blank, reserved; 
  uint64_t source_bytes;
} tidyvnc_cursor_geometry;
typedef struct {
  uint32_t size, version, x, y, width, height, reserved[2];
} tidyvnc_cursor_tile;
typedef struct {
  uint32_t size, version, remote_width, remote_height, units, reserved;
  double viewport_width, viewport_height, backing_scale, pan_x, pan_y;
  tidyvnc_bytes scaling;
} tidyvnc_geometry_options;
typedef struct {
  uint32_t size, version, backing_width, backing_height;
  double x, y, width, height;
  int32_t remote_x, remote_y;
} tidyvnc_geometry;
typedef struct {
  uint32_t size, version, width, height, x, y, region_width, region_height;
} tidyvnc_canvas_viewport;
typedef struct {
  uint32_t size, version, x, y, width, height, quality, reserved;
} tidyvnc_damage;
typedef struct {
  uint32_t size, version;
  double x, y, width, height;
} tidyvnc_rectangle;
typedef struct {
  uint32_t size, version;
  tidyvnc_handle session; 
  uint64_t generation, focus_revision, policy_revision;
} tidyvnc_clipboard_route;
typedef struct {
  uint32_t size, version, kind, result; 
  uint64_t sequence;
  tidyvnc_clipboard_route route;
  tidyvnc_handle text; 
} tidyvnc_clipboard_update;
typedef struct {
  uint32_t size, version, from_remote, reserved;
  tidyvnc_clipboard_route route;
  tidyvnc_bytes text; 
} tidyvnc_clipboard_info;
TIDYVNC_API tidyvnc_status tidyvnc_session_clipboard_policy(tidyvnc_handle, uint64_t generation, uint32_t send, uint32_t receive, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_clipboard_offer(tidyvnc_handle, uint64_t generation, tidyvnc_bytes text, tidyvnc_handle origin, uint64_t change_id, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_clipboard_clear(tidyvnc_handle, uint64_t generation, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_take_clipboard(tidyvnc_handle, tidyvnc_clipboard_update*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_clipboard_get(tidyvnc_handle text, tidyvnc_clipboard_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_clipboard_check(tidyvnc_handle, const tidyvnc_clipboard_route*, uint32_t sending, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_get_abi(tidyvnc_abi_info*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_security_choice_at(uint32_t index, tidyvnc_security_choice*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_tls_priority_validate(tidyvnc_bytes, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_sharing(tidyvnc_handle, tidyvnc_sharing*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_set_shared(tidyvnc_handle, uint64_t generation, uint64_t revision,
  uint32_t shared, uint64_t* new_revision, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_security(tidyvnc_handle, tidyvnc_security_configuration*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_set_security(tidyvnc_handle, uint64_t generation, uint64_t revision,
  const tidyvnc_security_update*, uint64_t* new_revision, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_security_resolve(tidyvnc_bytes text, uint32_t defaults, tidyvnc_security_selection*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_renderer_create(uint64_t cache_bytes, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_renderer_clear(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_renderer_render(tidyvnc_handle, tidyvnc_handle image, const tidyvnc_tile_options*,
                                      tidyvnc_mutable_bytes output, tidyvnc_tile_result*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_cursor_renderer_create(tidyvnc_handle image, const tidyvnc_cursor_options*,
                                             tidyvnc_handle*, tidyvnc_cursor_geometry*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_cursor_renderer_render(tidyvnc_handle, const tidyvnc_cursor_tile*, tidyvnc_mutable_bytes, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_scaling_parse(tidyvnc_bytes, tidyvnc_scaling*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_desktop_damage(const tidyvnc_geometry_options*, const tidyvnc_damage*, tidyvnc_rectangle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_desktop_geometry(const tidyvnc_geometry_options*, double point_x, double point_y, tidyvnc_geometry*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_desktop_canvas_geometry(const tidyvnc_geometry_options*, const tidyvnc_canvas_viewport*,
  double pointer_x, double pointer_y, tidyvnc_geometry*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_desktop_canvas_damage(const tidyvnc_geometry_options*, const tidyvnc_canvas_viewport*,
  const tidyvnc_damage*, tidyvnc_rectangle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_retain(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_release(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_runtime_options_init(tidyvnc_runtime_options*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_logging_validate(tidyvnc_bytes policy, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_logging_viewport(uint32_t logical_width, uint32_t logical_height,
  uint32_t backing_width, uint32_t backing_height, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_logging_configure(tidyvnc_bytes policy, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_logging_configure_with_file(tidyvnc_bytes policy, tidyvnc_bytes file_path, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_session_options_init(tidyvnc_session_options*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_connect_options_init(tidyvnc_connect_options*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_runtime_create(const tidyvnc_runtime_options*, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_runtime_shutdown(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_runtime_poll_drained(tidyvnc_handle, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_options_init(tidyvnc_listener_options*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_create(tidyvnc_handle runtime, const tidyvnc_listener_options*, tidyvnc_handle*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_get_snapshot(tidyvnc_handle, tidyvnc_listener_snapshot*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_take_event(tidyvnc_handle, tidyvnc_listener_event*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_reject(tidyvnc_handle, uint64_t incoming_id, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_accept(tidyvnc_handle listener, uint64_t incoming_id,
  tidyvnc_handle session, tidyvnc_operation*, tidyvnc_error*);
TIDYVNC_API tidyvnc_status tidyvnc_listener_stop(tidyvnc_handle, tidyvnc_error*);
typedef struct {
  uint32_t size, version, kind, security_type, shape, allow_unix_sockets, port, reserved;
  tidyvnc_bytes endpoint, route, username, host_key_alias;
} tidyvnc_identity_request;
typedef struct {
  uint32_t size, version;
  char text[80]; 
} tidyvnc_identity;
typedef struct {
  uint32_t size, version, port, flags;
  tidyvnc_bytes host, scope, user, canonical_uri;
} tidyvnc_ssh_gateway_info;
typedef struct {
  uint32_t size, version, width, height;
} tidyvnc_desktop_size;