platform/windows/TidyVNC.Native/Bridge/Interop.g.cs


[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_identity_request
{
    public uint size;
    public uint version;
    public uint kind;
    public uint security_type;
    public uint shape;
    public uint allow_unix_sockets;
    public uint port;
    public uint reserved;
    public tidyvnc_bytes endpoint;
    public tidyvnc_bytes route;
    public tidyvnc_bytes username;
    public tidyvnc_bytes host_key_alias;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_identity
{
    public uint size;
    public uint version;
    public fixed byte text[80];
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_ssh_gateway_info
{
    public uint size;
    public uint version;
    public uint port;
    public uint flags;
    public tidyvnc_bytes host;
    public tidyvnc_bytes scope;
    public tidyvnc_bytes user;
    public tidyvnc_bytes canonical_uri;
}

[StructLayout(LayoutKind.Sequential)]
public unsafe partial struct tidyvnc_desktop_size
{
    public uint size;
    public uint version;
    public uint width;
    public uint height;
}

[InlineArray(2)]
public struct tidyvnc_listener_address_Array2
{
    private tidyvnc_listener_address _element0;
}

[InlineArray(255)]
public struct tidyvnc_remote_screen_Array255
{
    private tidyvnc_remote_screen _element0;
}

[InlineArray(64)]
public struct tidyvnc_remote_screen_Array64
{
    private tidyvnc_remote_screen _element0;
}

/// <summary>Every tidyvnc_viewer.dll export, in header order.</summary>
public static unsafe partial class NativeMethods
{
    public const string Library = "tidyvnc_viewer";

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_host_key_validate(tidyvnc_bytes key, uint* bits, tidyvnc_error* error);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_certificate_key_create(tidyvnc_bytes p0, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_certificate_key_get(ulong p0, tidyvnc_certificate_key_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_certificate_key_digest(ulong p0, uint p1, tidyvnc_key_digest* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_certificate_policy_get(uint p0, tidyvnc_certificate_policy* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_clipboard_policy(ulong p0, ulong generation, uint send, uint receive, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_clipboard_offer(ulong p0, ulong generation, tidyvnc_bytes text, ulong origin, ulong change_id, tidyvnc_operation* p5, tidyvnc_error* p6);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_clipboard_clear(ulong p0, ulong generation, tidyvnc_operation* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_take_clipboard(ulong p0, tidyvnc_clipboard_update* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_clipboard_get(ulong text, tidyvnc_clipboard_info* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_clipboard_check(ulong p0, tidyvnc_clipboard_route* p1, uint sending, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_get_abi(tidyvnc_abi_info* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_security_choice_at(uint index, tidyvnc_security_choice* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_tls_priority_validate(tidyvnc_bytes p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_sharing(ulong p0, tidyvnc_sharing* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_set_shared(ulong p0, ulong generation, ulong revision, uint shared, ulong* new_revision, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_security(ulong p0, tidyvnc_security_configuration* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_set_security(ulong p0, ulong generation, ulong revision, tidyvnc_security_update* p3, ulong* new_revision, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_security_resolve(tidyvnc_bytes text, uint defaults, tidyvnc_security_selection* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_renderer_create(ulong cache_bytes, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_renderer_clear(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_renderer_render(ulong p0, ulong image, tidyvnc_tile_options* p2, tidyvnc_mutable_bytes output, tidyvnc_tile_result* p4, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_cursor_renderer_create(ulong image, tidyvnc_cursor_options* p1, ulong* p2, tidyvnc_cursor_geometry* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_cursor_renderer_render(ulong p0, tidyvnc_cursor_tile* p1, tidyvnc_mutable_bytes p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_scaling_parse(tidyvnc_bytes p0, tidyvnc_scaling* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_desktop_damage(tidyvnc_geometry_options* p0, tidyvnc_damage* p1, tidyvnc_rectangle* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_desktop_geometry(tidyvnc_geometry_options* p0, double point_x, double point_y, tidyvnc_geometry* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_desktop_canvas_geometry(tidyvnc_geometry_options* p0, tidyvnc_canvas_viewport* p1, double pointer_x, double pointer_y, tidyvnc_geometry* p4, tidyvnc_error* p5);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_desktop_canvas_damage(tidyvnc_geometry_options* p0, tidyvnc_canvas_viewport* p1, tidyvnc_damage* p2, tidyvnc_rectangle* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_retain(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_release(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_runtime_options_init(tidyvnc_runtime_options* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_logging_validate(tidyvnc_bytes policy, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_logging_viewport(uint logical_width, uint logical_height, uint backing_width, uint backing_height, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_logging_configure(tidyvnc_bytes policy, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_logging_configure_with_file(tidyvnc_bytes policy, tidyvnc_bytes file_path, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_session_options_init(tidyvnc_session_options* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_connect_options_init(tidyvnc_connect_options* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_runtime_create(tidyvnc_runtime_options* p0, ulong* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_runtime_shutdown(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_runtime_poll_drained(ulong p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_options_init(tidyvnc_listener_options* p0, tidyvnc_error* p1);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_create(ulong runtime, tidyvnc_listener_options* p1, ulong* p2, tidyvnc_error* p3);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_get_snapshot(ulong p0, tidyvnc_listener_snapshot* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_take_event(ulong p0, tidyvnc_listener_event* p1, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_reject(ulong p0, ulong incoming_id, tidyvnc_error* p2);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_accept(ulong listener, ulong incoming_id, ulong session, tidyvnc_operation* p3, tidyvnc_error* p4);

    [LibraryImport(Library)]
    [UnmanagedCallConv(CallConvs = [typeof(CallConvCdecl)])]
    public static partial uint tidyvnc_listener_stop(ulong p0, tidyvnc_error* p1);
